# image_sender

./: client.py  client_window.py  pyproject.toml  server.py
